--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -37,18 +37,16 @@
 
 \section{Introduction}
 \label{sec:introduction}
-% Begin Section
-
-This section of the SRS should provide an overview of the entire SRS.
+This is the Software Requirement Specification for Hacker Sim.
 
 \subsection{Purpose}
 \label{sub:purpose}
-% Begin SubSection
-\begin{enumerate}[a)]
-	\item Delineate the purpose of the SRS
-	\item Specify the intended audience for the SRS
-\end{enumerate}
-% End SubSection
+The purpose of the document is to lay out a description and intention of the 
+software that is being developed for both the client and the developers. It 
+will convey the software and hardware requirements of the game, as well as the 
+design constraints of the software. Furthermore, this document is used to define 
+our product, its functionality and performance which will be used to verify the 
+product in the testing process. 
 
 \subsection{Scope}
 \label{sub:scope}
