--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -50,14 +50,14 @@ product in the testing process.
 
 \subsection{Scope}
 \label{sub:scope}
-% Begin SubSection
-\begin{enumerate}[a)]
-	\item Identify the software product(s) to be produced by name (e.g., Host DBMS, Report Generator, etc.)
-	\item Explain what the software product(s) will, and, if necessary, will not do
-	\item Describe the application of the software being specified, including relevant benefits, objectives, and goals
-	\item Be consistent with similar statements in higher-level specifications (e.g., the system requirements specification), if they exist
-\end{enumerate}
-% End SubSection
+The purpose of the proposed software, Hacker Sim, will be an enjoyable, 
+interactive game that will allow the user to grow their specimen and beat their 
+highscores. The focus of the application is to grow a Software Engineer in their 
+room. Both the Software Engineer and their room can be upgraded using the 
+in-game currency. The in-game currency will be acquired through the completion 
+of tasks. Online capabilities will give users the ability to share their rooms 
+and chat as well as give gifts to other users to help complete tasks. 
+
 
 \subsection{Definitions, Acronyms, and Abbreviations}
 \label{sub:definitions_acronyms_and_abbreviations}
