Adding Definitions, Acronyms, and Abbreviations

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -61,11 +61,7 @@ and chat as well as give gifts to other users to help complete tasks.
 
 \subsection{Definitions, Acronyms, and Abbreviations}
 \label{sub:definitions_acronyms_and_abbreviations}
-% Begin SubSection
-\begin{enumerate}[a)]
-	\item Provide the definitions of all terms, acronyms, and abbreviations required to properly interpret the SRS
-\end{enumerate}
-% End SubSection
+SE - Software Engineer
 
 \subsection{References}
 \label{sub:references}
