--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -13,6 +13,12 @@
 \usepackage{graphicx}
 \usepackage{extarrows}
 \usepackage{setspace}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    urlcolor=cyan,
+}
 %------------------------------------------------------------------------------
 
 % Header and Footer
@@ -65,13 +71,11 @@ SE - Software Engineer
 
 \subsection{References}
 \label{sub:references}
-% Begin SubSection
-\begin{enumerate}[a)]
-	\item Provide a complete list of all documents referenced elsewhere in the SRS
-	\item Identify each document by title, report number (if applicable), date, and publishing organization
-	\item Specify the sources from which the references can be obtained
-\end{enumerate}
-% End SubSection
+Dormehl, L. (2019, May 29). The Tamagotchi Effect: How Digital Pets Shaped The 
+Way We Use Technology. Retrieved from 
+\url{https://www.digitaltrends.com/cool-tech/how-tamagotchi-shaped-tech/}
+\\\\
+Technologies, U. (n.d.). Unity. Retrieved from \url{https://unity.com/}
 
 \subsection{Overview}
 \label{sub:overview}
