--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -79,14 +79,15 @@ Technologies, U. (n.d.). Unity. Retrieved from \url{https://unity.com/}
 
 \subsection{Overview}
 \label{sub:overview}
-% Begin SubSection
-\begin{enumerate}[a)]
-	\item Describe what the rest of the SRS contains
-	\item Explain how the SRS is organized
-\end{enumerate}
-% End SubSection
+The document is organized in the following manner: Overall Description, Use 
+Case Diagram, Functional Requirements, Non-Functional Requirements. Overall 
+Description focuses on providing details about how the ideas link together to 
+enable specific functionality and showing functionality through comparison as 
+well as outline who the users are intended to be and the constraints. Use Case 
+Diagrams demonstrate how the stakeholder carries out business events. Functional 
+Requirements explains the functionality of the system. Finally, the 
+Non-Functional Requirements focuses on the required qualities of the software.
 
-% End Section
 
 \section{Overall Description}
 \label{sec:overall_description}
