Added Product Functions

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -122,19 +122,18 @@ The system’s main features:
 
 \subsection{Product Functions}
 \label{sub:product_functions}
-% Begin SubSection
-\begin{enumerate}[a)]
-	\item Provide a summary of the major functions that the software will perform.
-	\begin{itemize}
-		\item \textbf{Example}: An SRS for an accounting program may use this part to address customer account maintenance, customer statement, and invoice preparation without mentioning the vast amount of detail that each of those functions requires.
-	\end{itemize}
-	\item Functions should be organized in a way that makes the list of functions understandable to the customer or to anyone else reading the document for the first time
-	\item Textual or graphical methods can be used to show the different functions and their relationships
-	\begin{itemize}
-		\item Such a diagram is not intended to show a design of a product, but simply shows the logical relationships among variables
-	\end{itemize} 
-\end{enumerate}
-% End SubSection
+The system’s functionality is centralized around the user raising their digital 
+specimen as a Software Engineer (referred to as SE below). The user will be 
+involved with the lifecycle of specimen and attempt to promote it with a set 
+of means and reach end-game goal. A currency system is designed for the in-game 
+shop and the user can earn currency from initiating interactions/events with 
+their SE. For example, working and completing coding projects. The in-game 
+shop contains three main categories of items: interactable items (pets and 
+exercise equipment), furniture and room upgrades and food. The specimen has a 
+list of metrics, i.e. tiredness, happiness, age, health, etc. The user must 
+follow certain rules to keep metrics within a rational range, otherwise it will 
+hinder specimen growth or lead to game failure. The user will be able to view 
+their specimen’s information to check their progress and current health. 
 
 \subsection{User Characteristics}
 \label{sub:user_characteristics}
