Added List of Basic Functions

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -122,6 +122,7 @@ The system’s main features:
 
 \subsection{Product Functions}
 \label{sub:product_functions}
+\subsubsection{Function Summary}
 The system’s functionality is centralized around the user raising their digital 
 specimen as a Software Engineer (referred to as SE below). The user will be 
 involved with the lifecycle of specimen and attempt to promote it with a set 
@@ -134,6 +135,17 @@ list of metrics, i.e. tiredness, happiness, age, health, etc. The user must
 follow certain rules to keep metrics within a rational range, otherwise it will 
 hinder specimen growth or lead to game failure. The user will be able to view 
 their specimen’s information to check their progress and current health. 
+
+\subsubsection{List of Basic Functions}
+\begin{enumerate}
+    \item User creates a SE.
+    \item Users initiate events and interact with their SE.
+    \item Users purchase items from the in-game shop.
+    \item Users utilize items.
+    \item Users customize specimen’s room.
+    \item Users view specimen’s information.
+    \item Users reset their game stage and start a new one.
+\end{enumerate}
 
 \subsection{User Characteristics}
 \label{sub:user_characteristics}
