Added Function Domain

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -19,6 +19,7 @@
     linkcolor=blue,
     urlcolor=cyan,
 }
+\usepackage{float}
 %------------------------------------------------------------------------------
 
 % Header and Footer
@@ -146,6 +147,13 @@ their specimen’s information to check their progress and current health.
     \item Users view specimen’s information.
     \item Users reset their game stage and start a new one.
 \end{enumerate}
+
+\subsubsection{Function Domain}
+\begin{figure}[H]
+    \centering
+    \includegraphics[scale=0.5]{"Function Domain Diagram".png}
+    \caption{Function Domain}
+\end{figure}
 
 \subsection{User Characteristics}
 \label{sub:user_characteristics}
