Added User Characteristics

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -151,18 +151,22 @@ their specimen’s information to check their progress and current health.
 \subsubsection{Function Domain}
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.5]{"Function Domain Diagram".png}
+    \includegraphics[scale=0.5]{"Function Domain Figure".png}
     \caption{Function Domain}
 \end{figure}
 
 \subsection{User Characteristics}
 \label{sub:user_characteristics}
-% Begin SubSection
-\begin{enumerate}[a)]
-	\item Describe those general characteristics of the intended users of the product including educational level, experience, and technical expertise
-	\item Do not state specific requirements, but rather provide the reasons why certain specific requirements are later specified
-\end{enumerate}
-% End SubSection
+Intended users do not have to meet a strict set of requirements to use our 
+product. Users can be a PhD student or no education. They are not required to 
+have past experience of similar types of games either. In general, it is 
+considered that the user should:
+
+\begin{itemize}
+    \item Have a hardware to run our product on, i.e. desktop, laptop, etc.
+    \item Have basic knowledge of operations for computer with access to internet
+    \item Be able to read FAQs and understand how to use the product
+\end{itemize}
 
 \subsection{Constraints}
 \label{sub:constraints}
