--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -170,11 +170,20 @@ considered that the user should:
 
 \subsection{Constraints}
 \label{sub:constraints}
-% Begin SubSection
-\begin{enumerate}[a)]
-	\item Provide a general description of any other items that will limit the developer's options
-\end{enumerate}
-% End SubSection
+Items that might limit the developer's options:
+
+\begin{itemize}
+    \item Regulatory policies: Unity has term of service that developers need 
+    to follow
+    \item Basic requirements expectation set by the project outline: Our 
+    product must satisfy these functionalities. Features that have a conflict 
+    with those won’t be our options.
+    \item Project deliverable deadlines and schedule: In the given limiting 
+    time, we may not be able to develop various complex functions that are not 
+    included in project outlines with complex implementations.
+    \item Developer team’s experience: Some people are using Unity platform for 
+    the first time and have finite experience with creating and designing games.
+\end{itemize}
 
 \subsection{Assumptions and Dependencies}
 \label{sub:assumptions_and_dependencies}
