Added Assumptions and Dependencies

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -187,15 +187,16 @@ Items that might limit the developer's options:
 
 \subsection{Assumptions and Dependencies}
 \label{sub:assumptions_and_dependencies}
-% Begin SubSection
-\begin{enumerate}[a)]
-	\item List each of the factors that affect the requirements stated in the SRS
-	\item These factors are not design constraints on the software but are, rather, any changes to them that can affect the requirements in the SRS
-	\begin{itemize}
-		\item \textbf{Example}: An assumption may be that a specific operating system will be available on the hardware designated for the software product. If, in fact, the operating system is not available, the SRS would then have to change accordingly.
-	\end{itemize}
-\end{enumerate}
-% End SubSection
+\begin{itemize}
+    \item As mentioned above in section 2.3, all requirements are based on the 
+    criteria outlined for proper use of the product. If definitions change 
+    during development, requirements will change accordingly.
+    \item All requirements are written under the assumption that our product is 
+    able to run on users’ hardware - the user’s hardware supports the technology 
+    of our product.
+    \item It is assumed that the product is running in an environment with 
+    internet connection.
+\end{itemize}
 
 \subsection{Apportioning of Requirements}
 \label{sub:apportioning_of_requirements}
