Added Apportioning of Requirements

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -200,13 +200,16 @@ Items that might limit the developer's options:
 
 \subsection{Apportioning of Requirements}
 \label{sub:apportioning_of_requirements}
-% Begin SubSection
-\begin{enumerate}[a)]
-	\item Identify requirements that may be delayed until future versions of the system
-\end{enumerate}
-% End SubSection
+Requirements that may be delayed until future versions of the system:
 
-% End Section
+\begin{itemize}
+    \item Customization of SE’s room feature might be delayed as it is not a 
+    core feature to support main functions of system and it is not a requirement 
+    set by project outline
+    \item Interaction between SEs of different users feature might be delayed 
+    if the team cannot find a proper way to achieve this function in the given 
+    time
+\end{itemize}
 
 \section{Use Case Diagram}
 \label{sec:use_case_diagram}
