Added Title Page

--- a/Docs/D1/D1.tex
+++ b/Docs/D1/D1.tex
@@ -24,16 +24,25 @@
 
 % Header and Footer
 %------------------------------------------------------------------------------
-\pagestyle{plain}  
-\renewcommand\headrulewidth{0.4pt}                                      
-\renewcommand\footrulewidth{0.4pt}                                    
+\pagestyle{plain}
+\renewcommand\headrulewidth{0.4pt}
+\renewcommand\footrulewidth{0.4pt}                        
 %------------------------------------------------------------------------------
 
 % Title Details
 %------------------------------------------------------------------------------
-\title{Deliverable \#1 Template}
-\author{SE 3A04: Software Design II -- Large System Design}
-\date{}                               
+\title{
+    \bf{Group 10 - Deliverable \#1}\\
+    \large SFWRENG 3A04: Software Design III - Large System Design
+}
+\author{
+    Andrew Hum 400138826\\
+    Arkin Modi 400142497\\
+    Hongzhao Tan 400136957\\
+    Christopher Vishnu 400129743\\
+    Shengchen Zhou 400050783\\
+}
+\date{Feburary 7, 2020}
 %------------------------------------------------------------------------------
 
 % Document
@@ -41,6 +50,7 @@
 \begin{document}
 
 \maketitle	
+\newpage
 
 \section{Introduction}
 \label{sec:introduction}
